--- a/Exp_Design.tex
+++ b/Exp_Design.tex
@@ -29,7 +29,7 @@ The UKF framework depends upon two sensors: a global-shutter monocular camera an
 
 \subsection{PTAM Anomalies}
 
-During preliminary experiments, the parameter $\alpha$ (Section~\ref{sec:Prediction_Step}) was tuned such that pose estimates from the UKF would almost exactly track those coming from PTAM. This is a desirable behavior given that, between PTAM and the IMU, PTAM will almost always be the more accurate sensor. However, because of this close coupling between PTAM's output and the UKF's output, idiosyncrasies in PTAM's behavior will have an outsized effect on the behavior of the filter. The experiments chosen to test the system's effectiveness were thus influenced largely by the known capabilities and limitations of the ROS PTAM implementation\footnote{From here on, ``PTAM'' refers to the particular ROS implementation of PTAM used in the experiments, not to the algorithm in general.}.
+During preliminary experiments, the parameter $\alpha$ (Section~\ref{sec:Prediction_Step}) was tuned such that pose estimates from the UKF would almost exactly track those coming from PTAM. This is a desirable behavior given that, between PTAM and the IMU, PTAM will almost always be the more accurate sensor. However, because of this close coupling between PTAM's output and the UKF's output, idiosyncrasies in PTAM's behavior will have an outsized effect on the behavior of the filter. The experiments chosen to test the system's effectiveness were thus influenced largely by the known capabilities and limitations of the ROS PTAM implementation\footnote{From here on, ``PTAM'' refers to the particular ETHZ-ASL ROS implementation of PTAM used in the experiments (\url{http://wiki.ros.org/ethzasl_ptam}), not to the algorithm in general.}.
 
 Previous experiments\footnote{Performed both by the author and by various other parties at NASA Langley, where the experiments described here took place.} have shown PTAM to lose tracking\footnote{``Tracking'' here refers to current pose knowledge.} frequently during large rotations. PTAM is particularly susceptible to losing tracking during \textit{pure} rotations, in which the camera rotates in place without translational motion. Worse, whenever PTAM undergoes a rotation, it interprets this as a rotation coupled with an arc-like translation, regardless of whether any translation actually took place.
 
