--- a/Title_Page.tex
+++ b/Title_Page.tex
@@ -22,9 +22,9 @@ Aerospace Engineering
 
 \vfill
 
-Kevin Kochersberger, Chair \\
-Mazen Farhood \\
-Craig Woolsey
+Kevin B. Kochersberger, Chair \\
+Mazen H. Farhood \\
+Craig A. Woolsey
 
 \vfill
 
